# VIRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  build-window.bat  test-window.bat
Engine/: CMakeLists.txt  Entry.cpp
Engine/Core/: Application.cpp  Application.h  pch.h
Engine/Core/Event/: EventAction.h  EventContext.cpp  EventContext.h  EventManager.cpp  EventManager.h  EventParam.h  EventPriority.h  GameEventManager.cpp  GameEventManager.h
Engine/Core/Input/: Input.cpp  Input.h  InputEvent.cpp  InputEvent.h  InputEventAction.h  InputEventManager.cpp  InputEventManager.h  KeyCode.cpp  KeyCode.h
Engine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.h
Engine/Core/Logger/: Logger.cpp  Logger.h
Engine/Core/Math/: Compute.cpp  Compute.h  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Engine/Core/Memory/: CommonDefine.cpp  CommonDefine.h
Engine/Core/Renderer/: CommonDefine.h  DescriptorRange.cpp  DescriptorRange.h  DescriptorRangeLayout.cpp  DescriptorRangeLayout.h  GPUBuffer.cpp  GPUBuffer.h  GPUIndexBuffer.cpp  GPUIndexBuffer.h  GPUIndexBufferAccessor.cpp  GPUIndexBufferAccessor.h  GPUVertexBuffer.cpp  GPUVertexBuffer.h  GPUVertexBufferAccessor.cpp  GPUVertexBufferAccessor.h  InputAssembler.cpp  InputAssembler.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineLayout.cpp  RenderPipelineLayout.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferLayout.cpp  UniformBufferLayout.h
Engine/Core/Resource/: Buffer.cpp  Buffer.h  CommonDefine.h  IndexBuffer.cpp  IndexBuffer.h  VertexAttribute.cpp  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
Engine/Core/Time/: Timer.cpp  Timer.h
Engine/Core/Type/Object/: RTTI.cpp  RTTI.h
Engine/Core/Type/String/: StringID.cpp  StringID.h
Engine/Core/Window/: Window.cpp  Window.h
Engine/Platform/Renderer/DX12/: DX12Buffer.cpp  DX12Buffer.h  DX12DescriptorRange.cpp  DX12DescriptorRange.h  DX12DescriptorRangeLayout.cpp  DX12DescriptorRangeLayout.h  DX12Exception.cpp  DX12Exception.h  DX12Helper.cpp  DX12Helper.h  DX12IndexBuffer.cpp  DX12IndexBuffer.h  DX12IndexBufferAccessor.cpp  DX12IndexBufferAccessor.h  DX12InputAssembler.cpp  DX12InputAssembler.h  DX12RenderCommand.cpp  DX12RenderCommand.h  DX12RenderCommandQueue.cpp  DX12RenderCommandQueue.h  DX12RenderPipeline.cpp  DX12RenderPipeline.h  DX12RenderPipelineLayout.cpp  DX12RenderPipelineLayout.h  DX12RendererContext.cpp  DX12RendererContext.h  DX12Shader.cpp  DX12Shader.h  DX12ShaderCompiler.cpp  DX12ShaderCompiler.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12UniformBuffer.cpp  DX12UniformBuffer.h  DX12UniformBufferLayout.cpp  DX12UniformBufferLayout.h  DX12VertexBuffer.cpp  DX12VertexBuffer.h  DX12VertexBufferAccessor.cpp  DX12VertexBufferAccessor.h
Engine/Platform/Window/: WindowApplication.h
Engine/Platform/Windows/: WindowsEntry.cpp  pch.h
Engine/Platform/Windows/Input/: WindowsInput.cpp  WindowsInput.h  WindowsKeyCode.cpp  WindowsKeyCode.h
Engine/Platform/Windows/Window/: WindowsWindow.cpp  WindowsWindow.h
Engine/Test/: CMakeLists.txt  TestApplication.cpp
Engine/Test/Core/Math/: Compute_Test.cpp  Helper.h  Math_Test.cpp  Matrix3_Test.cpp  Matrix4_Test.cpp  Quaternion_Test.cpp  Vector2_Test.cpp  Vector3_Test.cpp  Vector4_Test.cpp
Engine/Test/Core/Type/Object/: RTTI_Test.cpp
Engine/Test/Core/Type/String/: StringID_Test.cpp
Engine/Test/Platform/Renderer/DX12/: DX12Helper_Test.cpp
Engine/Test/Type/String/: StringID_Test.cpp
Game/: CMakeLists.txt  Souce.cpp  Source.cpp
Game/Assets/Shader/: BasicPixelShader.ps.hlsl  BasicShaderHeader.hlsli  BasicVertexShader.vs.hlsl
MMDApp/: CMakeLists.txt
MMDApp/Assets/Shader/: BasicPixelShader.ps.hlsl  BasicShaderHeader.hlsli  BasicVertexShader.vs.hlsl
MMDApp/Source/: Main.cpp
MMDApp/Source/Layer/: GameplayLayer.cpp  GameplayLayer.h  TestingLayer.cpp  TestingLayer.h
